# styrene-rs

./: .gitignore  .upstream-tracking.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.i2p  LICENSE  Makefile  README.md  SECURITY.md  UPSTREAM.md  clippy.toml  deny.toml  findings.md  flake.nix  justfile  release-plz.toml  result
crates/apps/interop-test/: Cargo.toml
crates/apps/interop-test/src/: lib.rs
crates/apps/lxmf-cli/: Cargo.toml
crates/apps/lxmf-cli/examples/: desktop-reference.toml
crates/apps/lxmf-cli/src/: main.rs
crates/apps/reticulumd/: Cargo.toml
crates/apps/reticulumd/examples/: service-reference.toml
crates/apps/reticulumd/src/: announce_names.rs  config.rs  identity_store.rs  inbound_delivery.rs  lib.rs  lxmf_bridge.rs  receipt_bridge.rs  rns_crypto.rs
crates/apps/reticulumd/tests/: announce_names.rs  direct_link_delivery.rs  direct_link_inbound.rs  lxmf_bridge_tests.rs  receipt_bridge.rs  receipt_worker.rs
crates/apps/rns-tools/: Cargo.toml
crates/apps/rns-tools/examples/: gateway-reference.toml
crates/apps/styrene/: Cargo.toml
crates/apps/styrene-dx/: AGENTS.md  Cargo.toml
crates/apps/styrene-dx/src/: daemon_bridge.rs  main.rs  state.rs
crates/apps/styrene-i2p/: Cargo.toml
crates/apps/styrene-i2p/src/: main.rs  mesh_client.rs  proxy.rs
crates/apps/styrene-tui/: AGENTS.md  Cargo.toml
crates/apps/styrene-tui/docs/: tui-design-spec.md
crates/apps/styrene-tui/src/: app.rs  daemon.rs  main.rs  mesh_state.rs  micron_widget.rs  state.rs  ui.rs
crates/apps/styrene/src/: cli.rs  commands.rs  ipc_client.rs  main.rs
crates/apps/styrened/: AGENTS.md  Cargo.toml
crates/apps/styrened-rs/: Cargo.toml
crates/apps/styrened-rs/src/: app_context.rs  config.rs  daemon_facade.rs  identity_store.rs  inbound_delivery.rs  lib.rs  lxmf_bridge.rs  lxmf_stamps.rs  receipt_bridge.rs
crates/apps/styrened-rs/tests/: announce_names.rs  app_context_construction.rs  config.rs  daemon_facade_contract.rs  direct_link_delivery.rs  identity_store.rs  lxmf_bridge_tests.rs  python_compat_matrix.rs  receipt_bridge.rs  receipt_mapping.rs  receipt_worker.rs  rns_crypto.rs  transport_contract.rs  transport_null.rs  worker_inbound.rs
crates/apps/styrened/src/: announce_names.rs  app_context.rs  config.rs  daemon.rs  daemon_facade.rs  inbound_delivery.rs  lib.rs  lxmf_bridge.rs  mobile.rs  receipt_bridge.rs
crates/apps/styrened/tests/: announce_names.rs  app_context_construction.rs  config.rs  daemon_facade_contract.rs  direct_link_delivery.rs  direct_link_inbound.rs  identity_store.rs  lxmf_bridge_tests.rs  python_compat_matrix.rs  receipt_bridge.rs  receipt_mapping.rs  receipt_worker.rs  rns_crypto.rs  transport_contract.rs  transport_null.rs  worker_inbound.rs
crates/bindings/styrene-mobile-ffi/: Cargo.toml
crates/bindings/styrene-mobile-ffi/src/: lib.rs
crates/bindings/styrene-native/: Cargo.toml  pyproject.toml
crates/bindings/styrene-native/src/: content.rs  lib.rs  wire.rs
crates/internal/reticulum-legacy/: Cargo.toml
crates/internal/reticulum-legacy/examples/: link_client.rs  multihop.rs  tcp_client.rs  tcp_server.rs  testnet_client.rs  udp_link.rs
crates/internal/reticulum-legacy/src/: buffer.rs  channel.rs  crypt.rs  destination.rs  e2e_harness.rs  hash.rs  identity.rs  iface.rs  packet.rs  ratchets.rs  receipt.rs  resource.rs
crates/internal/reticulum-legacy/tests/: announce_scheduler.rs  api_helpers.rs  buffer_parity.rs  cli_parity.rs  config_parity.rs  crypto_parity.rs  destination_parity.rs  discovery_parity.rs  e2e_harness_helpers.rs  examples_compile.rs  fixture_loader.rs  hash_parity.rs  hop_test.rs  identity_parity.rs  iface_parity.rs  link_event_layout.rs  link_proof_packet.rs  lxmf_address_hash.rs  lxmf_group_encrypt.rs  lxmf_packet_limits.rs  lxmf_receipt_callbacks.rs  lxmf_receipt_proof.rs  lxmf_reexports.rs  lxmf_signature.rs  packet_parity.rs  parity_matrix_gate.rs  python_announce.rs  python_rust_announce_interop_gate.rs  resolver_parity.rs  resource_channel_parity.rs  reticulum_fixtures.rs  reticulumd_announce_scheduler.rs  rpc_announces.rs  rpc_bridge.rs  rpc_events.rs  rpc_frame_handler.rs  rpc_framing.rs  rpc_http.rs  rpc_messages_parity.rs  rpc_methods.rs  (+8 more)
crates/libs/lxmf-core/: Cargo.toml
crates/libs/lxmf-core/src/: constants.rs  error.rs  errors.rs  inbound_decode.rs  lib.rs  payload_fields.rs  wire_fields.rs
crates/libs/lxmf-sdk/: Cargo.toml
crates/libs/rns-rpc/: Cargo.toml
crates/libs/styrene-amcp/: Cargo.toml  README.md
crates/libs/styrene-content/: AGENTS.md  Cargo.toml
crates/libs/styrene-entropy/: AGENTS.md  Cargo.toml
crates/libs/styrene-forge/: Cargo.toml
crates/libs/styrene-identity/: AGENTS.md  Cargo.toml  README.md  SECURITY.md
crates/libs/styrene-ipc/: AGENTS.md  Cargo.toml
crates/libs/styrene-ipc-server/: AGENTS.md  Cargo.toml
crates/libs/styrene-lxmf/: AGENTS.md  Cargo.toml
crates/libs/styrene-mesh/: AGENTS.md  Cargo.toml
crates/lxmf/: Cargo.toml  build.rs
crates/lxmf/src/: constants.rs  handlers.rs  helpers.rs  identity.rs  lib.rs  router_api.rs  stamper.rs
crates/lxmf/tests/: contract_harness.rs  contract_v2_payload_fixtures.rs  handlers_behavior.rs  lxmf_cli_args.rs  lxmf_contact_commands.rs  lxmf_daemon_commands.rs  lxmf_daemon_supervisor.rs  lxmf_iface_commands.rs  lxmf_message_commands.rs  lxmf_peer_commands.rs  lxmf_profile.rs  lxmf_rpc_client.rs  lxmf_runtime_context.rs  message_fixtures.rs  message_payload.rs  message_uri_file_helpers.rs  message_wire.rs  parity_matrix_gate.rs  payload_parity.rs  pn_announce_data_parity.rs  propagation_parity.rs  propagation_store.rs  propagation_verification.rs  python_client_interop_gate.rs  python_interop_gate.rs  router_parity.rs  router_peer_sync.rs  router_transport.rs  rpc_contract_methods.rs  smoke.rs  stamper_parity.rs  stamper_ticket_behavior.rs  storage_parity.rs
crates/reticulum-daemon/: Cargo.toml
crates/reticulum-daemon/src/: inbound_delivery.rs
crates/reticulum-daemon/tests/: lxmf_bridge_tests.rs
xtask/: Cargo.toml
xtask/src/: client_codegen.rs  main.rs
(+1100 files in other folders)
