[workspace]
resolver = "2"
members = [
  "crates/libs/styrene-rns",
  "crates/libs/styrene-rns-transport",
  "crates/libs/styrene-lxmf",
  "crates/libs/styrene-mesh",
  "crates/libs/lxmf-sdk",
  "crates/libs/rns-rpc",
  "crates/libs/test-support",
  "crates/meta/styrene",
  "crates/apps/styrened-rs",
  "crates/apps/interop-test",
  "crates/apps/lxmf-cli",
  "crates/apps/reticulumd",
  "crates/apps/rns-tools",
]
default-members = [
  "crates/libs/styrene-rns",
  "crates/libs/styrene-rns-transport",
  "crates/libs/styrene-lxmf",
  "crates/libs/styrene-mesh",
  "crates/libs/lxmf-sdk",
  "crates/libs/rns-rpc",
  "crates/libs/test-support",
  "crates/meta/styrene",
  "crates/apps/styrened-rs",
  "crates/apps/interop-test",
  "crates/apps/lxmf-cli",
  "crates/apps/reticulumd",
  "crates/apps/rns-tools",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/styrene-lab/styrene-rs"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5.29", features = ["derive"] }
clap_complete = "4.5"
criterion = "0.5"
styrene-lxmf = { version = "0.1.0", path = "crates/libs/styrene-lxmf" }
lxmf-sdk = { version = "0.1.0", path = "crates/libs/lxmf-sdk" }
styrene-rns = { version = "0.1.0", path = "crates/libs/styrene-rns" }
rns-rpc = { version = "0.1.0", path = "crates/libs/rns-rpc" }
styrene-rns-transport = { version = "0.1.0", path = "crates/libs/styrene-rns-transport" }
styrene-mesh = { version = "0.1.0", path = "crates/libs/styrene-mesh" }
aes = "0.8.4"
base64 = "0.22"
cbc = "0.1.2"
crypto-common = "0.1.6"
ed25519-dalek = "=2.1.1"
hkdf = "0.12.4"
hmac = "0.12.1"
hex = "0.4"
log = "0.4.27"
loom = "0.7"
serde_bytes = "0.11"
rmp-serde = "1.3.0"
rmpv = "1.3.0"
rusqlite = "0.31.0"
time = "0.3.45"
tokio-util = "0.7.15"
bzip2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
sha2 = "0.10"
toml = "0.8"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
x509-parser = "0.16.0"
rand_core = "0.6.4"
x25519-dalek = "2.0.1"
thiserror = "1"
zeroize = "1.8"

[profile.dev.package.styrene-rns]
opt-level = 2

[profile.test.package.styrene-rns]
opt-level = 2

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "warn"
