[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
globset = "0.4"
jsonschema = { version = "=0.17.0", default-features = false, features = ["draft202012"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true

[package.metadata.cargo-udeps]
ignore = { normal = ["globset", "jsonschema"] }

[lints]
workspace = true
