[package]
name = "lxmf"
version = "0.3.0"
build = "build.rs"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/FreeTAKTeam/LXMF-rs"
description = "Lightweight Rust implementation of LXMF focused on protocol portability and reliability."
readme = "../../README.md"

[dependencies]
reticulum = { package = "reticulum-rs", version = "0.1.3", path = "../reticulum" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
rmp-serde = "1"
sha2 = "0.10"
hkdf = "0.12"
rmpv = { version = "1.0", features = ["with-serde"] }
serde_bytes = "0.11"
hex = "0.4"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
x25519-dalek = "2.0.1"
base64 = "0.22"
serde_json = { version = "1", optional = true }
clap = { version = "4.5.4", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
anyhow = { version = "1", optional = true }
dirs = { version = "6", optional = true }
ureq = { version = "2.10", optional = true }
comfy-table = { version = "7.1", default-features = false, optional = true }
tokio = { version = "1.44", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[build-dependencies]
serde_json = "1"

[features]
default = []
json-interop = ["dep:serde_json"]
cli = [
  "dep:anyhow",
  "dep:clap",
  "dep:comfy-table",
  "dep:dirs",
  "json-interop",
  "dep:serde_json",
  "dep:toml",
  "dep:ureq",
]
embedded-runtime = ["cli", "dep:tokio"]

[[bin]]
name = "lxmf"
path = "src/bin/lxmf.rs"
required-features = ["cli"]
