[package]
name = "lxmf-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
clap.workspace = true
lxmf = { package = "lxmf", path = "../../internal/lxmf-legacy", default-features = false, features = ["cli"] }

[lints]
workspace = true
