[package]
name = "reticulumd"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "reticulum_daemon"

[dependencies]
rns_transport = { package = "rns-transport", path = "../../libs/rns-transport" }
rns_rpc = { package = "rns-rpc", path = "../../libs/rns-rpc" }
lxmf = { package = "lxmf-core", path = "../../libs/lxmf-core", default-features = false }
rns_core = { package = "rns-core", path = "../../libs/rns-core" }
base64 = "0.22"
clap = { version = "4.5.29", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
x25519-dalek = { version = "2.0.1" }
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"
rmpv = "1.3.1"
rmp-serde = "1.3.1"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "reticulumd"
path = "src/bin/reticulumd/main.rs"
