[package]
name = "reticulumd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "reticulum_daemon"

[dependencies]
rns_transport = { package = "rns-transport", path = "../../libs/rns-transport", version = "0.1.0" }
rns_rpc = { package = "rns-rpc", path = "../../libs/rns-rpc", version = "0.1.0" }
lxmf = { package = "lxmf-core", path = "../../libs/lxmf-core", version = "0.1.0", default-features = false, features = ["std"] }
rns_core = { package = "rns-core", path = "../../libs/rns-core", version = "0.1.0" }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rand_core = { workspace = true, features = ["getrandom"] }
x25519-dalek = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
rmpv = { workspace = true }
rmp-serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "reticulumd"
path = "src/bin/reticulumd/main.rs"
