[package]
name = "rns-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
clap.workspace = true
tempfile.workspace = true
serde_json.workspace = true
rns_transport = { package = "rns-transport", path = "../../libs/rns-transport" }
rns_rpc = { package = "rns-rpc", path = "../../libs/rns-rpc" }

[lints]
workspace = true
