[package]
name = "styrene-dx"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Styrene unified UI spike — Dioxus cross-platform (web/desktop/TUI)"
publish = false

[[bin]]
name = "styrene-dx"
path = "src/main.rs"

[dependencies]
# Dioxus core + platform renderers
dioxus = { version = "0.7", features = ["desktop"] }

# Daemon integration (hybrid: IPC socket or embedded)
styrened = { path = "../styrened" }
styrene-ipc = { path = "../../libs/styrene-ipc" }
styrene-ipc-server = { path = "../../libs/styrene-ipc-server" }
styrene-micron = { path = "../../libs/styrene-micron" }

# Protocol crates
styrene-rns = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Utilities
hex.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rmpv = { workspace = true, features = ["with-serde"] }
rand_core = { workspace = true, features = ["getrandom"] }
futures-util = "0.3"

[lints]
workspace = true
