[package]
name = "styrene-tui"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license.workspace = true
repository.workspace = true
description = "Styrene terminal UI spike — Ratatui mesh status display"
publish = false

[[bin]]
name = "styrene-tui"
path = "src/main.rs"

[dependencies]
# TUI core
ratatui = "0.30"
crossterm = "0.29"
ratatui-textarea = { version = "0.8", features = ["crossterm"] }
tui-tree-widget = "0.24"
ratatui-toaster = "0.1"
tachyonfx = { version = "0.25.0", features = ["sendable"] }
tui-syntax-highlight = "0.2"
unicode-width = "0.2"

# Protocol crates (no transport — pure data types)
styrene-rns = { workspace = true }
styrene-micron = { workspace = true }

# Daemon integration
styrene-ipc = { path = "../../libs/styrene-ipc", version = "0.1.0" }
styrene-ipc-server = { path = "../../libs/styrene-ipc-server", version = "0.1.0" }
styrened = { path = "../styrened", version = "0.1.0" }

# Utilities
hex.workspace = true
toml = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
serde.workspace = true
serde_json.workspace = true
rmpv = { workspace = true, features = ["with-serde"] }
tokio = { workspace = true }
anyhow.workspace = true

[lints]
workspace = true
