[package]
name = "styrened-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Styrene mesh daemon (Rust implementation)"

[dependencies]
styrene-rns = { version = "0.1.0", path = "../../libs/styrene-rns" }
styrene-rns-transport = { version = "0.1.0", path = "../../libs/styrene-rns-transport" }
styrene-lxmf = { version = "0.1.0", path = "../../libs/styrene-lxmf" }
styrene-mesh = { version = "0.1.0", path = "../../libs/styrene-mesh" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true }

[[bin]]
name = "styrened-rs"
path = "src/bin/main.rs"

[lints]
workspace = true
