[package]
name = "styrened-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "reticulum_daemon"

[dependencies]
rns_core = { package = "styrene-rns", path = "../../libs/styrene-rns", version = "0.1.0", features = ["transport"] }
lxmf = { package = "styrene-lxmf", path = "../../libs/styrene-lxmf", version = "0.1.0", default-features = false, features = ["std"] }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hmac.workspace = true
hex.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
rmp-serde.workspace = true
rmpv = { workspace = true, features = ["with-serde"] }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
x25519-dalek = { workspace = true }
x509-parser = { workspace = true }
zeroize.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "styrened-rs"
path = "src/bin/reticulumd/main.rs"
