[package]
name = "styrene-mobile-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "UniFFI bindings for styrene-rs mobile embedding (iOS/Android)"
keywords = ["styrene", "reticulum", "mesh", "mobile", "ffi"]
categories = ["api-bindings"]

[lib]
name = "styrene_mobile_ffi"
# staticlib for iOS (linked into Swift), cdylib for Android (loaded via JNI)
crate-type = ["staticlib", "cdylib"]

[dependencies]
styrened = { path = "../../apps/styrened", default-features = false, features = ["bundled-sqlite"] }
uniffi = { version = "0.28" }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
hex.workspace = true

[features]
default = ["android"]
android = ["styrened/mobile-identity"]
ios = ["styrened/mobile-keychain"]

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[lints]
workspace = true
