[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "styrene-native"
version = "0.1.0"
description = "Native Rust acceleration for styrened — wire protocol, node store, crypto"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["styrene", "reticulum", "mesh", "rust", "native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
