[package]
name = "lxmf-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
rns-core = { path = "../rns-core" }
base64 = "0.22"
hex = "0.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rmp-serde = "1"
rmpv = { version = "1.0", features = ["with-serde"] }
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0", features = ["std"] }
sha2 = "0.10"
thiserror.workspace = true
x25519-dalek = "2.0.1"

[features]
default = []

[lints]
workspace = true
