[package]
name = "lxmf-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rns-rpc = { path = "../rns-rpc", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

[features]
default = ["std", "sdk-async", "rpc-backend"]
std = []
sdk-async = []
rpc-backend = ["dep:rns-rpc"]
embedded-alloc = []

[lints]
workspace = true
