[package]
name = "lxmf-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rns-rpc = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
zeroize.workspace = true

[features]
default = ["std", "sdk-async", "rpc-backend"]
std = []
sdk-async = []
rpc-backend = ["std", "dep:rns-rpc", "dep:rustls", "dep:rustls-pemfile"]
embedded-alloc = []
loom-tests = []

[dev-dependencies]
criterion.workspace = true
loom.workspace = true

[package.metadata.cargo-udeps]
ignore = { development = ["loom"] }

[[bench]]
name = "sdk_client_paths"
harness = false

[lints]
workspace = true
