[package]
name = "styrene-amcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Async CasparCG AMCP protocol client"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
